Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55291

libqxcb-glx-integration segfault

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.7.2
    • 5.7.0
    • QPA: X11/XCB
    • None
    • linux amd64 (fedora rawhide)

      Bino 3D video player crashes with qt 5.7
      after QXcbGlxWindow::createVisual code change.
      No issue with older versions of qt5 even with qt4.

      The bino faulty code :

      bool video_output_qt::supports_stereo() const
      {
          QGLFormat fmt = _format;
          fmt.setStereo(true);
          QGLWidget *tmpwidget = new QGLWidget(fmt);         ->  segfault  here
          bool ret = tmpwidget->format().stereo();
          delete tmpwidget;
          return ret;
      }
      

      The backtrace :

       Thread 1 "bino" received signal SIGSEGV, Segmentation fault.
      0x00007ffff7e31219 in QXcbGlxWindow::createVisual() ()
         from /usr/lib64/qt5/plugins/xcbglintegrations/libqxcb-glx-integration.so
      (gdb) bt
      #0  0x00007ffff7e31219 in QXcbGlxWindow::createVisual() ()
         from /usr/lib64/qt5/plugins/xcbglintegrations/libqxcb-glx-integration.so
      #1  0x00007fffdf454c66 in QXcbWindow::create() () from /lib64/libQt5XcbQpa.so.5
      #2  0x00007fffdf441370 in QXcbIntegration::createPlatformWindow(QWindow*) const () from /lib64/libQt5XcbQpa.so.5
      #3  0x00007ffff48de429 in QWindowPrivate::create(bool) () from /lib64/libQt5Gui.so.5
      #4  0x00007ffff7f9ac4a in QGLContext::chooseContext(QGLContext const*) () from /lib64/libQt5OpenGL.so.5
      #5  0x00007ffff7f9971a in QGLContext::create(QGLContext const*) () from /lib64/libQt5OpenGL.so.5
      #6  0x00007ffff7f9753f in QGLWidget::setContext(QGLContext*, QGLContext const*, bool) ()
         from /lib64/libQt5OpenGL.so.5
      #7  0x00007ffff7f99a75 in QGLWidgetPrivate::initContext(QGLContext*, QGLWidget const*) ()
         from /lib64/libQt5OpenGL.so.5
      #8  0x00005555555b8f48 in video_output_qt::supports_stereo (this=<optimized out>) at video_output_qt.cpp:886
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            eddy02 eddy pilon
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes