Add detection and workaround for QTBUG-55291

This is a crash during window initialization if testing the
GL Stereo capability. Right now, support for stereo in the
free version of the software is minimal, so it should not matter much.